--- a/guide/elements.html
+++ b/guide/elements.html
@@ -33,6 +33,7 @@
                         <li><a href="#button">Button</a></li>
                         <li><a href="#checkbox">Checkbox</a></li>
                         <li><a href="#icon">icon</a></li>
+                        <li><a href="#list">List</a></li>
                         <!-- <li><a href="#dropdown">Dropdown</a></li> -->
                         <!-- <li><a href="#datepicker">Datepicker</a></li> -->
                         <li><a href="#form">form</a></li>
