--- a/guide/elements/checkbox.html
+++ b/guide/elements/checkbox.html
@@ -98,4 +98,84 @@
             </code></pre>
         </div>
     </div>
+
+    <div class="g-example-wrap">
+        <div class="g-example-head">
+            <p class="title">checkbox group - BP</p>
+        </div>
+        <div class="g-example-body bp">
+            <div class="check-group">
+                <div class="h-checkbox">
+                    <input type="checkbox" id="checkbox1-1" name="checkbox" />
+                    <label for="checkbox1-1"><span>unchecked</span></label>
+                </div>
+                <div class="h-checkbox">
+                    <input type="checkbox" id="checkbox1-2" name="checkbox" checked="checked" />
+                    <label for="checkbox1-2"><span>checked</span></label>
+                </div>
+                <div class="h-checkbox">
+                    <input type="checkbox" id="checkbox1-3" name="checkbox" disabled="disabled" />
+                    <label for="checkbox1-3"><span>disabled</span></label>
+                </div>
+            </div>
+        </div>
+        <div class="g-example-foot">
+            <pre><code class="html">
+&lt;div class="check-group">
+    &lt;div class="h-checkbox">
+        &lt;input type="checkbox" id="checkbox1-1" name="checkbox" />
+        &lt;label for="checkbox1-1">&lt;span>unchecked&lt;/span>&lt;/label>
+    &lt;/div>
+    &lt;div class="h-checkbox">
+        &lt;input type="checkbox" id="checkbox1-2" name="checkbox" checked="checked" />
+        &lt;label for="checkbox1-2">&lt;span>checked&lt;/span>&lt;/label>
+    &lt;/div>
+    &lt;div class="h-checkbox">
+        &lt;input type="checkbox" id="checkbox1-3" name="checkbox" disabled="disabled" />
+        &lt;label for="checkbox1-3">&lt;span>disabled&lt;/span>&lt;/label>
+    &lt;/div>
+&lt;/div>
+            </code></pre>
+        </div>
+    </div>
+
+    <div class="g-example-wrap">
+        <div class="g-example-head">
+            <p class="title">radio group - BP</p>
+        </div>
+        <div class="g-example-body bp">
+            <div class="check-group">
+                <div class="h-checkbox">
+                    <input type="radio" id="radio1-1" name="radio" checked="checked" />
+                    <label for="radio1-1"><span>unchecked</span></label>
+                </div>
+                <div class="h-checkbox">
+                    <input type="radio" id="radio1-2" name="radio" />
+                    <label for="radio1-2"><span>checked</span></label>
+                </div>
+                <div class="h-checkbox">
+                    <input type="radio" id="radio1-3" name="radio" disabled="disabled" />
+                    <label for="radio1-3"><span>disabled</span></label>
+                </div>
+            </div>
+        </div>
+        <div class="g-example-foot">
+            <pre><code class="html">
+&lt;div class="check-group">
+    &lt;div class="h-checkbox">
+        &lt;input type="radio" id="radio1-1" name="radio" checked="checked" />
+        &lt;label for="radio1-1">&lt;span>unchecked&lt;/span>&lt;/label>
+    &lt;/div>
+    &lt;div class="h-checkbox">
+        &lt;input type="radio" id="radio1-2" name="radio" />
+        &lt;label for="radio1-2">&lt;span>checked&lt;/span>&lt;/label>
+    &lt;/div>
+    &lt;div class="h-checkbox">
+        &lt;input type="radio" id="radio1-3" name="radio" disabled="disabled" />
+        &lt;label for="radio1-3">&lt;span>disabled&lt;/span>&lt;/label>
+    &lt;/div>
+&lt;/div>
+            </code></pre>
+        </div>
+    </div>
 </div>
