--- a/guide/elements/icon.html
+++ b/guide/elements/icon.html
@@ -58,6 +58,23 @@
                 <span class="g-label">26*26 사이즈</span>
                 <i class="h-ico lg tip">팁</i>
             </div>
+            <div>
+                <span class="g-label">40*40 사이즈</span>
+                <i class="h-ico sector1"></i>
+                <i class="h-ico sector2"></i>
+                <i class="h-ico sector3"></i>
+                <i class="h-ico sector4"></i>
+                <i class="h-ico sector5"></i>
+                <i class="h-ico sector6"></i>
+                <i class="h-ico sector7"></i>
+                <i class="h-ico sector8"></i>
+                <i class="h-ico sector9"></i>
+                <i class="h-ico sector10"></i>
+                <i class="h-ico sector11"></i>
+                <i class="h-ico sector12"></i>
+                <i class="h-ico sector13"></i>
+                <i class="h-ico sector14"></i>
+            </div>
         </div>
         <div class="g-example-foot">
             <pre><code class="html">
@@ -96,6 +113,23 @@
 &lt;div>
     &lt;span class="g-label">26*26 사이즈&lt;/span>
     &lt;i class="h-ico lg tip">팁&lt;/i>
+&lt;/div>
+&lt;div>
+    &lt;span class="g-label">40*40 사이즈&lt;/span>
+    &lt;i class="h-ico sector1">&lt;/i>
+    &lt;i class="h-ico sector2">&lt;/i>
+    &lt;i class="h-ico sector3">&lt;/i>
+    &lt;i class="h-ico sector4">&lt;/i>
+    &lt;i class="h-ico sector5">&lt;/i>
+    &lt;i class="h-ico sector6">&lt;/i>
+    &lt;i class="h-ico sector7">&lt;/i>
+    &lt;i class="h-ico sector8">&lt;/i>
+    &lt;i class="h-ico sector9">&lt;/i>
+    &lt;i class="h-ico sector10">&lt;/i>
+    &lt;i class="h-ico sector11">&lt;/i>
+    &lt;i class="h-ico sector12">&lt;/i>
+    &lt;i class="h-ico sector13">&lt;/i>
+    &lt;i class="h-ico sector14">&lt;/i>
 &lt;/div>
             </code></pre>
         </div>
