--- a/guide/list.html
+++ b/guide/list.html
@@ -14,13 +14,6 @@
         tbody tr.do {
             background-color: lightblue;
         }
-        /* tbody tr.todo th:not(.d1):not(.d2):not(.d3),
-        tbody tr.todo th:not(.d1):not(.d2):not(.d3) span,
-        tbody tr.todo td:not(.d1):not(.d2):not(.d3),
-        tbody tr.todo td:not(.d1):not(.d2):not(.d3) span,
-        tbody tr.todo td:not(.d1):not(.d2):not(.d3) a {
-            color: rgb(0, 119, 255);
-        } */
         .d4 { display: none; }
         .del {
             position: relative;
@@ -45,7 +38,7 @@
 <div class="guide_wrap">
     <header class="g_header">
         <ul>
-            <!-- <li><h1><a  href="./list.html">효성</a></h1></li> -->
+            <li><a href="./list_other.html">BP & BC</a></li>
             <li><a href="./list.html">List</a></li>
             <li><a href="./elements.html?elements=button">Elements</a></li>
         </ul>
