--- a/pages/SA/SA0301.html
+++ b/pages/SA/SA0301.html
@@ -75,7 +75,7 @@
                                     <input data-role="dateinput" data-format="yyyy/MM/dd" data-value="2021/07/31"/> 
                                     <span class="bar">~</span>
                                     <input data-role="dateinput" data-format="yyyy/MM/dd" data-value="2021/07/31"/> 
-                                    <ul data-role="buttongroup" class=""
+                                    <ul data-role="buttongroup" class="period"
                                     data-index="0">
                                         <li data-role="button">6년</li>
                                         <li data-role="button">1년</li>
