--- a/pages/SA/SA0602_01.html
+++ b/pages/SA/SA0602_01.html
@@ -42,18 +42,20 @@
                     <div class="send-form-set">
                         <div class="list">
                             <label class="label" for="ID-send-receiver">수신자</label>
-                            <div class="form-group row">
+                            <div class="form-group col">
                                 <div class="form-set">
                                     <input id="ID-send-receiver" class="h-input" placeholder="수신자를 추가해주세요"/>
                                     <button data-role="button" class="gray-border">수신자추가</button>
                                     <button data-role="button" class="gray-border">대량수신자추가</button>
                                 </div>
-                                <div class="form-set filebox">
-                                    <h4 class="label">대량입력</h4>
-                                    <input class="h-input xl" value="파일을 업로드해주세요" disabled="disabled">
-                                    <label for="ex_filename" class="h-btn">업로드</label> 
-                                    <input type="file" id="ex_filename" class="upload-hidden"> 
-                                    <button data-role="button" class="light-green">샘플파일다운로드</button>
+                                <div class="pop-box">
+                                    <div class="form-set filebox">
+                                        <h4 class="label">대량입력</h4>
+                                        <input class="h-input xl" value="파일을 업로드해주세요" disabled="disabled">
+                                        <label for="ex_filename" class="h-btn">업로드</label> 
+                                        <input type="file" id="ex_filename" class="upload-hidden"> 
+                                        <button data-role="button" class="light-green">샘플파일다운로드</button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
