--- a/pages/SA/SA0602_02.html
+++ b/pages/SA/SA0602_02.html
@@ -42,7 +42,7 @@
                     <div class="send-form-set">
                         <div class="list">
                             <label class="label" for="ID-send-receiver">수신자</label>
-                            <div class="form-group row">
+                            <div class="form-group col">
                                 <div class="form-set">
                                     <input id="ID-send-receiver" class="h-input" placeholder="수신자를 추가해주세요"/>
                                     <button data-role="button" class="gray-border">수신자추가</button>
