--- a/pages/SA/SA0101.html
+++ b/pages/SA/SA0101.html
@@ -69,7 +69,7 @@
                                     <input data-role="dateinput" data-format="yyyy/MM/dd" data-value="2021/07/31"/> 
                                     <span class="bar">~</span>
                                     <input data-role="dateinput" data-format="yyyy/MM/dd" data-value="2021/07/31"/> 
-                                    <ul data-role="buttongroup" class=""
+                                    <ul data-role="buttongroup" class="period"
                                     data-index="0">
                                         <li data-role="button">오늘</li>
                                         <li data-role="button">7일</li>
