--- a/pages/SA/SA0401.html
+++ b/pages/SA/SA0401.html
@@ -32,7 +32,7 @@
                                 data-navigational=true,
                                 data-items='[
                             { type:"rootitem", href: "", text: "서비스품질", showText: true },
-                            { type:"item", href: "", text: "요청사항 관리", showText: true}
+                            { type:"item", href: "", text: "공지사항 관리", showText: true}
                          ]'/>
                         </div>
                     </div>
@@ -45,7 +45,7 @@
                             <div class="form-group">
                                 <span class="label">검색항목</span>
                                 <div class="form-set">
-                                    <select data-role="dropdownlist" data-value="전체" data-option-label="전체">
+                                    <select data-role="dropdownlist" data-value="제목" data-option-label="제목">
                                         <option value="1">온라인</option>
                                         <option value="2">오프라인</option>
                                     </select>
@@ -66,7 +66,8 @@
                                 </div>
                                 <div class="right-group">
                                     <div class="btn-box">
-                                        <button data-role="button">요청사항등록</button>
+                                        <button data-role="button">공지안내발송</button>
+                                        <button data-role="button">등록</button>
                                         <button data-role="button" class="green">엑셀</button>
                                     </div>
                                 </div>
