--- a/guide/list_other.html
+++ b/guide/list_other.html
@@ -140,6 +140,16 @@
                     <td class="state" data-state="ing"></td>
                     <td></td>
                 </tr>
+                <tr class="">
+                    <td class="d1"></td>
+                    <td class="d2"></td>
+                    <td class="d3"></td>
+                    <td class="sbid"><span class="pc">BC0004</span><span class="mo"></span></td>
+                    <td class="coder">주진희</td>
+                    <td class="date"></td>
+                    <td class="state" data-state="ing"></td>
+                    <td></td>
+                </tr>
             </tbody>
         </table>
     </div>
