--- a/pages/BC/BC0003.html
+++ b/pages/BC/BC0003.html
@@ -10,18 +10,28 @@
 <body class="bc">
     <div class="wrap">
         <!-- Header Include -->
-        <div data-include-path="../layout/header_bc.html"></div>
+        <div data-include-path="../layout/header_bp.html"></div>
 
-        <div id="container" class="logout-page">
-            <div class="logout-con">
-                <img src="../../resources/images/icon/bc_icon_logout_check.svg" class="check">
-                <p class="main-info">자동 <span class="strong">로그아웃</span> 되었습니다.</p>
-                <p class="sub-info">
-                    로그인 후 <span class="strong">60분</span> 동안 상담센터 이용이 없어<br/>
-                    <span class="strong">자동으로 접속을 종료</span>하였습니다.<br/>
-                    상담센터를 계속 이용하시려면 재로그인해 주시기 바랍니다.
-                </p>
-                <button data-role="button">확인</button>
+        <div id="container">
+        </div>
+        <div class="layer-wrap bp">
+            <div data-role="dialog"
+                 data-title="비밀번호 변경"
+                 data-width="450"
+                 data-modal="false"
+                >
+                <div class="content-group">
+                    <img src="../../resources/images/icon/bc_icon_change_pw.svg" class="check">
+                    <p class="main-info">고객님께서는 <span class="error">3개월동안</span><br/>
+                        <span class="error">비밀번호</span>를 변경하지 않으셨습니다.</p>
+                    <p class="sub-info">
+                        고객님의 소중한 개인정보를 위해 주기적인 비밀번호 변경을 권장 드립니다.
+                    </p>
+                    <div class="btn-box">
+                        <button data-role="button" class="gray-border">다음에 변경하기</button>
+                        <button data-role="button" class="">비밀번호 변경</button>
+                    </div>
+                </div>
             </div>
         </div>
  
