--- a/pages/BC/BC0004.html
+++ b/pages/BC/BC0004.html
@@ -10,18 +10,51 @@
 <body class="bc">
     <div class="wrap">
         <!-- Header Include -->
-        <div data-include-path="../layout/header.html"></div>
+        <div data-include-path="../layout/header_bp.html"></div>
 
-        <div id="container" class="logout-page">
-            <div class="logout-con">
-                <img src="../../resources/images/icon/bc_icon_logout_check.svg" class="check">
-                <p class="main-info">자동 <span class="strong">로그아웃</span> 되었습니다.</p>
-                <p class="sub-info">
-                    로그인 후 <span class="strong">60분</span> 동안 상담센터 이용이 없어<br/>
-                    <span class="strong">자동으로 접속을 종료</span>하였습니다.<br/>
-                    상담센터를 계속 이용하시려면 재로그인해 주시기 바랍니다.
-                </p>
-                <button data-role="button">확인</button>
+        <div id="container">
+        </div>
+        <div class="layer-wrap bp">
+            <div data-role="dialog"
+                 data-title="비밀번호 변경"
+                 data-width="410"
+                 data-modal="false"
+                >
+                <div class="content-group">
+                    <div class="table">
+                        <table>
+                            <colgroup>
+                                <col width="120px">
+                                <col width="*">
+                            </colgroup>
+                            <tbody>
+                                <tr>
+                                    <th scope="row">USER ID</th>
+                                    <td>sale008</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">현재 비밀번호<span class="required">*</span></th>
+                                    <td><input type="text" class="h-input" /></td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">변경 비밀번호<span class="required">*</span></th>
+                                    <td><input type="text" class="h-input" /></td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">변경 비밀번호 확인<span class="required">*</span></th>
+                                    <td><input type="text" class="h-input" /></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <ul class="pop-guide">
+                        <li class="list">* 비밀번호는 8~12자 영문, 숫자, 특수문자를 포함해서 작성해야 합니다.</li>
+                        <li class="list">* 특수문자는 [!@#$^*_-]만 사용가능 합니다.</li>
+                    </ul>
+                    <div class="btn-box justify-content-end mt-10">
+                        <button data-role="button" class="">저장</button>
+                    </div>
+                </div>
             </div>
         </div>
  
