--- a/pages/BC/BC0003.html
+++ b/pages/BC/BC0003.html
@@ -20,7 +20,7 @@
                  data-width="450"
                  data-modal="false"
                 >
-                <div class="content-group">
+                <div class="content-group has-check">
                     <img src="../../resources/images/icon/bc_icon_change_pw.svg" class="check">
                     <p class="main-info">고객님께서는 <span class="error">3개월동안</span><br/>
                         <span class="error">비밀번호</span>를 변경하지 않으셨습니다.</p>
@@ -32,7 +32,13 @@
                         <button data-role="button" class="">비밀번호 변경</button>
                     </div>
                 </div>
-            </div>
+                <div class="check-group">
+                    <div class="h-checkbox">
+                        <input type="checkbox" id="chekNolonger" name="checkbox" />
+                        <label for="chekNolonger"><span>2주간 표시 안함</span></label>
+                    </div>
+                </div>
+            </div> 
         </div>
  
     </div>
