가이드 파일 B, BC, BP 분리 버튼 css파일 B, BC, BP 분리

--- a/guide/elements_bc/checkbox.html
+++ b/guide/elements_bc/checkbox.html
@@ -18,7 +18,7 @@
             </code></pre>
         </div>
     </div>
-
+<!-- 
     <div class="g-example-wrap">
         <div class="g-example-head">
             <p class="title">checkbox group</p>
@@ -97,6 +97,7 @@
 &lt;/div>
             </code></pre>
         </div>
-    </div>
+    </div> -->
 
+    
 </div>
