--- a/guide/elements/form.html
+++ b/guide/elements/form.html
@@ -1,71 +1,70 @@
 <div class="content-wrap">
     <div class="g-example-wrap">
-        <div class="g-example-wrap">
-            <div class="g-example-head">
-                <p class="title">Dropdown</p>
-            </div>
-            <div class="g-example-body flex-block">
-                <select data-role="dropdownlist" data-value="선택" data-option-label="선택">
-                    <option value="1">온라인</option>
-                    <option value="2">오프라인</option>
-                </select>
-                <select data-role="dropdownlist" data-value="선택" data-option-label="선택" disabled>
-                    <option value="1">온라인</option>
-                    <option value="2">오프라인</option>
-                </select>
-            </div>
+        <div class="g-example-head">
+            <p class="title">Dropdown</p>
+        </div>
+        <div class="g-example-body flex-block">
+            <select data-role="dropdownlist" data-value="선택" data-option-label="선택">
+                <option value="1">온라인</option>
+                <option value="2">오프라인</option>
+            </select>
+            <select data-role="dropdownlist" data-value="선택" data-option-label="선택" disabled>
+                <option value="1">온라인</option>
+                <option value="2">오프라인</option>
+            </select>
+        </div>
 
-            <div class="g-example-foot">
-                <pre><code class="html">
+        <div class="g-example-foot">
+            <pre><code class="html">
 &lt;select data-role="dropdownlist" data-value="선택" data-option-label="선택">
-    &lt;option value="1">온라인&lt;/option>
-    &lt;option value="2">오프라인&lt;/option>
+&lt;option value="1">온라인&lt;/option>
+&lt;option value="2">오프라인&lt;/option>
 &lt;/select>
 &lt;select data-role="dropdownlist" data-value="선택" data-option-label="선택" disabled>
-    &lt;option value="1">온라인&lt;/option>
-    &lt;option value="2">오프라인&lt;/option>
+&lt;option value="1">온라인&lt;/option>
+&lt;option value="2">오프라인&lt;/option>
 &lt;/select>
-                </code></pre>
-            </div>
+            </code></pre>
+        </div>
+    </div>
+
+    <div class="g-example-wrap">
+        <div class="g-example-head">
+            <p class="title">Date Range</p>
+        </div>
+        <div class="g-example-body flex-block">
+            <input data-role="dateinput" data-format="yyyy/MM/dd" data-value="2021/07/31"/> 
+            <input data-role="dateinput" data-format="yyyy/MM/dd" data-value="2021/07/31" disabled/> 
         </div>
 
-        <div class="g-example-wrap">
-            <div class="g-example-head">
-                <p class="title">Date Range</p>
-            </div>
-            <div class="g-example-body flex-block">
-                <input data-role="dateinput" data-format="yyyy/MM/dd" data-value="2021/07/31"/> 
-                <input data-role="dateinput" data-format="yyyy/MM/dd" data-value="2021/07/31" disabled/> 
-            </div>
-
-            <div class="g-example-foot">
-                <pre><code class="html">
+        <div class="g-example-foot">
+            <pre><code class="html">
 &lt;input data-role="dateinput" data-format="yyyy/MM/dd" data-value="2021/07/31"/> 
 &lt;input data-role="dateinput" data-format="yyyy/MM/dd" data-value="2021/07/31" disabled/> 
-                </code></pre>
+            </code></pre>
+        </div>
+    </div>
+
+
+    <div class="g-example-wrap">
+        <div class="g-example-head">
+            <p class="title">Input Status</p>
+        </div>
+        <div class="g-example-body flex-block">
+            <!-- [D] default 상태 -->
+            <input type="text" class="h-input sm" placeholder="placeholder" />
+            <!-- [D] with Data -->
+            <input type="text" class="h-input sm" value="Data" />
+            <!-- [D] disabled 상태 -->
+            <input type="text" class="h-input sm" value="disabled" disabled="disabled" />
+            <!-- [D] error 상태 -->
+            <div class="input-box col sm error">
+                <input type="text" class="h-input" value="error" />
+                <p class="note">Error Message</p>
             </div>
         </div>
-
-
-        <div class="g-example-wrap">
-            <div class="g-example-head">
-                <p class="title">Input Status</p>
-            </div>
-            <div class="g-example-body flex-block">
-                <!-- [D] default 상태 -->
-                <input type="text" class="h-input sm" placeholder="placeholder" />
-                <!-- [D] with Data -->
-                <input type="text" class="h-input sm" value="Data" />
-                <!-- [D] disabled 상태 -->
-                <input type="text" class="h-input sm" value="disabled" disabled="disabled" />
-                <!-- [D] error 상태 -->
-                <div class="input-box col sm error">
-                    <input type="text" class="h-input" value="error" />
-                    <p class="note">Error Message</p>
-                </div>
-            </div>
-            <div class="g-example-foot">
-                <pre><code class="html">
+        <div class="g-example-foot">
+            <pre><code class="html">
 &lt;!-- [D] default 상태 -->
 &lt;input type="text" class="h-input sm" placeholder="placeholder" />
 &lt;!-- [D] with Data -->
@@ -74,97 +73,96 @@
 &lt;input type="text" class="h-input sm" value="disabled" disabled="disabled" />
 &lt;!-- [D] error 상태 -->
 &lt;div class="input-box sm error">
-    &lt;input type="text" class="h-input" value="error" />
-    &lt;p class="note">Error Message&lt;/p>
+&lt;input type="text" class="h-input" value="error" />
+&lt;p class="note">Error Message&lt;/p>
 &lt;/div>
-                </code></pre>
+            </code></pre>
+        </div>
+    </div>
+
+    <div class="g-example-wrap">
+        <div class="g-example-head">
+            <p class="title">Form Group</p>
+        </div>
+        <div class="g-example-body flex-block">
+            <div class="form-group">
+                <span class="label">검색항목</span>
+                <div class="form-set">
+                    <select data-role="dropdownlist" data-value="선택" data-option-label="선택">
+                        <option value="1">온라인</option>
+                        <option value="2">오프라인</option>
+                    </select>
+                    <div class="input-box search lg">
+                        <input type="text" class="h-input" placeholder="입력해주세요">
+                    </div>
+                </div>
+            </div>
+            <div class="form-group">
+                <span class="label">상담부서</span>
+                <div class="form-set">
+                    <select data-role="dropdownlist" data-value="선택" data-option-label="선택">
+                        <option value="1">온라인</option>
+                        <option value="2">오프라인</option>
+                    </select>
+                </div>
+            </div>
+            <div class="form-group">
+                <span class="label">검색기간</span>
+                <div class="form-set">
+                    <input data-role="dateinput" data-format="yyyy/MM/dd" data-value="2021/07/31"/> 
+                    <span class="bar">~</span>
+                    <input data-role="dateinput" data-format="yyyy/MM/dd" data-value="2021/07/31"/> 
+                    <ul data-role="buttongroup" class="period"
+                    data-index="0">
+                        <li data-role="button">오늘</li>
+                        <li data-role="button">7일</li>
+                        <li data-role="button">15일</li>
+                        <li data-role="button">1개월</li>
+                        <li data-role="button">3개월</li>
+                    </ul>
+                </div>
             </div>
         </div>
-
-        <div class="g-example-wrap">
-            <div class="g-example-head">
-                <p class="title">Form Group</p>
-            </div>
-            <div class="g-example-body flex-block">
-                <div class="form-group">
-                    <span class="label">검색항목</span>
-                    <div class="form-set">
-                        <select data-role="dropdownlist" data-value="선택" data-option-label="선택">
-                            <option value="1">온라인</option>
-                            <option value="2">오프라인</option>
-                        </select>
-                        <div class="input-box search lg">
-                            <input type="text" class="h-input" placeholder="입력해주세요">
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <span class="label">상담부서</span>
-                    <div class="form-set">
-                        <select data-role="dropdownlist" data-value="선택" data-option-label="선택">
-                            <option value="1">온라인</option>
-                            <option value="2">오프라인</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <span class="label">검색기간</span>
-                    <div class="form-set">
-                        <input data-role="dateinput" data-format="yyyy/MM/dd" data-value="2021/07/31"/> 
-                        <span class="bar">~</span>
-                        <input data-role="dateinput" data-format="yyyy/MM/dd" data-value="2021/07/31"/> 
-                        <ul data-role="buttongroup" class="btn-box period"
-                        data-index="0">
-                            <li data-role="button">오늘</li>
-                            <li data-role="button">7일</li>
-                            <li data-role="button">15일</li>
-                            <li data-role="button">1개월</li>
-                            <li data-role="button">3개월</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="g-example-foot">
-                <pre><code class="html">
+        <div class="g-example-foot">
+            <pre><code class="html">
 &lt;div class="form-group">
-    &lt;span class="label">검색항목&lt;/span>
-    &lt;div class="form-set">
-        &lt;select data-role="dropdownlist" data-value="선택" data-option-label="선택">
-            &lt;option value="1">온라인&lt;/option>
-            &lt;option value="2">오프라인&lt;/option>
-        &lt;/select>
-        &lt;div class="input-box search lg">
-            &lt;input type="text" class="h-input" placeholder="입력해주세요">
-        &lt;/div>
+&lt;span class="label">검색항목&lt;/span>
+&lt;div class="form-set">
+    &lt;select data-role="dropdownlist" data-value="선택" data-option-label="선택">
+        &lt;option value="1">온라인&lt;/option>
+        &lt;option value="2">오프라인&lt;/option>
+    &lt;/select>
+    &lt;div class="input-box search lg">
+        &lt;input type="text" class="h-input" placeholder="입력해주세요">
     &lt;/div>
 &lt;/div>
-&lt;div class="form-group">
-    &lt;span class="label">상담부서&lt;/span>
-    &lt;div class="form-set">
-        &lt;select data-role="dropdownlist" data-value="선택" data-option-label="선택">
-            &lt;option value="1">온라인&lt;/option>
-            &lt;option value="2">오프라인&lt;/option>
-        &lt;/select>
-    &lt;/div>
 &lt;/div>
 &lt;div class="form-group">
-    &lt;span class="label">검색기간&lt;/span>
-    &lt;div class="form-set">
-        &lt;input data-role="dateinput" data-format="yyyy/MM/dd" data-value="2021/07/31"/> 
-        &lt;span class="bar">~&lt;/span>
-        &lt;input data-role="dateinput" data-format="yyyy/MM/dd" data-value="2021/07/31"/> 
-        &lt;ul data-role="buttongroup" class="btn-box period"
-        data-index="0">
-            &lt;li data-role="button">오늘&lt;/li>
-            &lt;li data-role="button">7일&lt;/li>
-            &lt;li data-role="button">15일&lt;/li>
-            &lt;li data-role="button">1개월&lt;/li>
-            &lt;li data-role="button">3개월&lt;/li>
-        &lt;/ul>
-    &lt;/div>
+&lt;span class="label">상담부서&lt;/span>
+&lt;div class="form-set">
+    &lt;select data-role="dropdownlist" data-value="선택" data-option-label="선택">
+        &lt;option value="1">온라인&lt;/option>
+        &lt;option value="2">오프라인&lt;/option>
+    &lt;/select>
 &lt;/div>
-                </code></pre>
-            </div>
+&lt;/div>
+&lt;div class="form-group">
+&lt;span class="label">검색기간&lt;/span>
+&lt;div class="form-set">
+    &lt;input data-role="dateinput" data-format="yyyy/MM/dd" data-value="2021/07/31"/> 
+    &lt;span class="bar">~&lt;/span>
+    &lt;input data-role="dateinput" data-format="yyyy/MM/dd" data-value="2021/07/31"/> 
+    &lt;ul data-role="buttongroup" class="btn-box period"
+    data-index="0">
+        &lt;li data-role="button">오늘&lt;/li>
+        &lt;li data-role="button">7일&lt;/li>
+        &lt;li data-role="button">15일&lt;/li>
+        &lt;li data-role="button">1개월&lt;/li>
+        &lt;li data-role="button">3개월&lt;/li>
+    &lt;/ul>
+&lt;/div>
+&lt;/div>
+            </code></pre>
         </div>
     </div>
 
@@ -189,34 +187,6 @@
         </div>
     </div>
 
-
-    <div class="g-example-wrap">
-        <div class="g-example-head">
-            <p class="title">BP - 파일 업로드 </p>
-        </div>
-        <div class="g-example-body flex-block bp">
-            <div class="form-group col filebox">
-                <label for="bp_filename" data-role="button" data-icon="bp-plus" class="blue-border"><span>파일 업로드</span></label> 
-                <div class="form-set">
-                    <select data-role="dropdownlist" data-value="이용약관동의서" data-option-label="이용약관동의서" class="md">
-                        <option value="1">온라인</option>
-                        <option value="2">오프라인</option>
-                    </select>
-                    <div class="input-box lg">
-                        <input class="h-input" placeholder="파일을 업로드해주세요" disabled="disabled">
-                        <button data-role="button" data-icon="bp-close" class="hidden"></button>
-                    </div>
-                    <input type="file" id="bp_filename" class="upload-hidden"> 
-                    <button data-role="button" class="gray-border">선택</button>
-                </div>
-            </div>
-        </div>
-        <div class="g-example-foot">
-            <pre><code class="html">
-
-            </code></pre>
-        </div>
-    </div>
 
 
 </div>
