--- a/guide/elements_bc/button.html
+++ b/guide/elements_bc/button.html
@@ -1,22 +1,20 @@
 <div class="content-wrap">
     <div class="g-example-wrap">
         <div class="g-example-head">
-            <p class="title">Default Button - B system</p>
+            <p class="title">Default Button</p>
         </div>
         <div class="g-example-body flex-inline">
-            <button data-role="button" class="">Button</button>
+            <button data-role="button" class="blue">Button</button>
             <button data-role="button" class="light-blue">Button</button>
             <button data-role="button" class="blue-border">Button</button>
             <button data-role="button" class="gray-border">Button</button>
-            <button data-role="button" class="green">Button</button>
         </div>
         <div class="g-example-foot">
             <pre><code class="html">
-&lt;button data-role="button" class="">Button&lt;/button>
+&lt;button data-role="button" class="blue">Button&lt;/button>
 &lt;button data-role="button" class="light-blue">Button&lt;/button>
 &lt;button data-role="button" class="blue-border">Button&lt;/button>
 &lt;button data-role="button" class="gray-border">Button&lt;/button>
-&lt;button data-role="button" class="green">Button&lt;/button>
             </code></pre>
         </div>
     </div>
@@ -26,11 +24,10 @@
             <p class="title">Disabled Button(임시)</p>
         </div>
         <div class="g-example-body flex-inline">
-            <button data-role="button" class="" disabled="disabled">Button</button>
+            <button data-role="button" class="blue" disabled="disabled">Button</button>
             <button data-role="button" class="light-blue" disabled="disabled">Button</button>
             <button data-role="button" class="blue-border" disabled="disabled">Button</button>
             <button data-role="button" class="gray-border" disabled="disabled">Button</button>
-            <button data-role="button" class="green" disabled="disabled">엑셀</button>
         </div>
         <div class="g-example-foot">
             <pre><code class="html">
@@ -38,7 +35,6 @@
 &lt;button data-role="button" class="light-blue" disabled="disabled">Button&lt;/button>
 &lt;button data-role="button" class="blue-border" disabled="disabled">Button&lt;/button>
 &lt;button data-role="button" class="gray-border" disabled="disabled">Button&lt;/button>
-&lt;button data-role="button" class="green" disabled="disabled">엑셀&lt;/button>
             </code></pre>
         </div>
     </div>
@@ -49,11 +45,10 @@
             <p class="title">Button with icons</p>
         </div>
         <div class="g-example-body flex-inline">
-            <button data-role="button" data-icon="example"><span>Button</span></button>
+            <button data-role="button" class="blue" data-icon="example"><span>Button</span></button>
             <button data-role="button" class="light-blue" data-icon="example"><span>Button</span></button>
             <button data-role="button" class="blue-border" data-icon="example"><span>Button</span></button>
             <button data-role="button" class="gray-border" data-icon="example"><span>Button</span></button>
-            <button data-role="button" class="green" data-icon="example"><span>Button</span></button>
         </div>
         <div class="g-example-foot">
             <pre><code class="html">
@@ -96,6 +91,5 @@ data-index="0">
             </code></pre>
         </div>
     </div>
-    
 
 </div>
