--- a/guide/elements_bp.html
+++ b/guide/elements_bp.html
@@ -19,8 +19,8 @@
     <div class="wrapper">
         <header class="g_header">
             <ul>
-                <li><a href="./list_other.html">BP & BC</a></li>
-                <li><a href="./list.html">B System</a></li>
+                <li><a href="./list_other.html">LIST - BP & BC</a></li>
+                <li><a href="./list.html">LIST - B System</a></li>
                 <li><a href="./elements.html?elements=button">Guide - B System</a></li>
                 <li><a href="./elements_bp.html?elements_bp=button">Guide - BP</a></li>
                 <li><a href="./elements_bc.html?elements_bc=button">Guide - BC</a></li>
