리스트수정

--- a/guide/list.html
+++ b/guide/list.html
@@ -99,9 +99,9 @@
                     <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state="done"></td>
-                    <td></td>
+                    <td>컴포넌트 작업 후 재전달</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">01기준정보</td>
                     <td class="d2">01거래처정보</td>
                     <td class="d3">01조회</td>
@@ -554,7 +554,7 @@
                     <td class="date_start">07-15</td>
                     <td class="date_end">07-22</td>
                     <td class="state" data-state="done"></td>
-                    <td></td>
+                    <td>컴포넌트 작업 후 재전달</td>
                 </tr>
                 <tr class="do">
                     <td class="d1">07서비스품질</td>
