--- a/guide/list_other.html
+++ b/guide/list_other.html
@@ -99,7 +99,7 @@
                     <td class="date_start">07-23</td>
                     <td class="date_end">07-27</td>
                     <td class="state" data-state="done"></td>
-                    <td></td>
+                    <td>window, 컴포넌트 작업 후 재전달</td>
                 </tr>
                 <tr class="do">
                     <td class="d1">공통(BC)</td>
@@ -138,7 +138,7 @@
                     <td class="date_start">07-23</td>
                     <td class="date_end">07-27</td>
                     <td class="state" data-state="done"></td>
-                    <td></td>
+                    <td>컴포넌트 작업 후 재전달</td>
                 </tr>
                 <tr class="">
                     <td class="d1">로그인</td>
@@ -151,7 +151,7 @@
                     <td class="date_start">07-23</td>
                     <td class="date_end">07-27</td>
                     <td class="state" data-state="done"></td>
-                    <td></td>
+                    <td>컴포넌트 작업 후 재전달</td>
                 </tr>
                 <tr class="">
                     <td class="d1">로그인</td>
@@ -164,7 +164,7 @@
                     <td class="date_start">07-23</td>
                     <td class="date_end">07-27</td>
                     <td class="state" data-state="done"></td>
-                    <td></td>
+                    <td>컴포넌트 작업 후 재전달</td>
                 </tr>
                 <tr class="">
                     <td class="d1">로그인</td>
@@ -177,7 +177,7 @@
                     <td class="date_start">07-23</td>
                     <td class="date_end">07-27</td>
                     <td class="state" data-state="done"></td>
-                    <td></td>
+                    <td>popup, 컴포넌트 작업 후 재전달</td>
                 </tr>
                 <tr class="">
                     <td class="d1">로그인</td>
@@ -190,7 +190,7 @@
                     <td class="date_start">07-23</td>
                     <td class="date_end">07-27</td>
                     <td class="state" data-state="done"></td>
-                    <td></td>
+                    <td>popup, 컴포넌트 작업 후 재전달</td>
                 </tr>
                 <tr class="">
                     <td class="d1">로그인</td>
@@ -203,7 +203,7 @@
                     <td class="date_start">07-23</td>
                     <td class="date_end">07-27</td>
                     <td class="state" data-state="done"></td>
-                    <td></td>
+                    <td>popup, 컴포넌트 작업 후 재전달</td>
                 </tr>
                 <tr class="do">
                     <td class="d1">01GNB</td>
@@ -216,7 +216,7 @@
                     <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
-                    <td></td>
+                    <td>popup</td>
                 </tr>
                 <tr class="do">
                     <td class="d1">01GNB</td>
